--- a/LeetCode_Michael/LeetCode_Michael/LeetCode_Michael.vcxproj
+++ b/LeetCode_Michael/LeetCode_Michael/LeetCode_Michael.vcxproj
@@ -111,6 +111,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="test_1.cpp" />
+    <ClCompile Include="test_2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
