--- a/LeetCode_Michael/LeetCode_Michael/LeetCode_Michael.vcxproj
+++ b/LeetCode_Michael/LeetCode_Michael/LeetCode_Michael.vcxproj
@@ -112,6 +112,9 @@
   <ItemGroup>
     <ClCompile Include="test_1.cpp" />
     <ClCompile Include="test_2.cpp" />
+    <ClCompile Include="test_3.cpp" />
+    <ClCompile Include="test_7.cpp" />
+    <ClCompile Include="test_8.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
